# who-ring-api

./: README.md  pyproject.toml
docker/: Dockerfile  Dockerfile.frontend  docker-compose.yml  nginx.conf
src/who_ring_api/: main.py
src/who_ring_api/database/: database.db  database.py
src/who_ring_api/dependencies/: dependencies.py
src/who_ring_api/models/: models.py
src/who_ring_api/routers/: api.py
src/who_ring_api/sms_provider/: sms_provider_factory.py  sms_provider_interface.py
src/who_ring_api/sms_provider/impl/: twilio_provider.py
src/who_ring_frontend/: README.md  package.json
src/who_ring_frontend/public/: index.html  manifest.json
src/who_ring_frontend/src/: App.css  App.js  index.css
src/who_ring_frontend/src/components/: Footer.js  Header.js
src/who_ring_frontend/src/pages/: Home.js  Lookup.js  NotFound.js  Register.js  Verify.js
